Alignment Issue in Create Project

--- a/phresco-framework-web/src/main/webapp/themes/default/css/Helios/style.css
+++ b/phresco-framework-web/src/main/webapp/themes/default/css/Helios/style.css
@@ -1155,7 +1155,7 @@ img[name="close"] {
 	color: #747474;
 	text-align:left;
 	border:none;
-	width: 5%;
+	/*width: 5%;*/
 }
 
 .errormessage {
